--- a/Tracking system login/css/main_table.css
+++ b/Tracking system login/css/main_table.css
@@ -105,11 +105,7 @@ iframe {
 .container-table100 {
   width: 100%;
   min-height: 100vh;
-  background: #c850c0;
-  background: -webkit-linear-gradient(45deg, #4158d0, #c850c0);
-  background: -o-linear-gradient(45deg, #4158d0, #c850c0);
-  background: -moz-linear-gradient(45deg, #4158d0, #c850c0);
-  background: linear-gradient(45deg, #4158d0, #c850c0);
+  background: linear-gradient(-135deg, #ffdc97,#FCB806, #ff9900);
 
   display: -webkit-box;
   display: -webkit-flex;
