--- a/Tracking system login/css/status.css
+++ b/Tracking system login/css/status.css
@@ -2,8 +2,7 @@
     color: #000;
     overflow-x: hidden;
     height: 100%;
-    background-color: #8C9EFF;
-    background-repeat: no-repeat
+    
   }
 
   .under {
@@ -15,6 +14,7 @@
     padding-bottom: 20px;
     margin-top: 90px;
     margin-bottom: 90px;
+    background: linear-gradient(-135deg, #ffdc97,#FCB806, #ff9900);
     border-radius: 10px
   }
 
@@ -47,6 +47,14 @@
     color: #fff
   }
 
+  .expandCard {
+    height: 400px;
+  }
+
+  .downloadLink {
+    background-color: #651FFF;
+    color: #fff;
+  }
   #progressbar li:before {
     width: 40px;
     height: 40px;
